Domibus 3.2.5
- Dynamic discovery: integrate Domibus with OASIS compliant SMP
- Added new security policy file, eSensPolicy.v2.0_CA.xml to support embedded public certificate
- Fixed the JMS property names used in the default-jms-plugin
Domibus 3.2.4
- Default WS plugin: backwards compatibility fix for Domibus >3.2.2
- Fix error when downloading a message with an empty payload
- CachingPModeProvider fix when Oracle database is used
Domibus 3.2.3
- JMS monitoring: extended the functionality for clustered installations.
- Core: listPendingMessages and download operations behave correctly in case of a clustered installation.
- The MSH WS endpoint returns 200 for the GET operation
- Renamed the eSensPolicy.xml WS policy to eSensPolicy.v2.0.xml which supports the signing of the empty body
- Added the domibus-plugins.xml file in the configuration of the Tomcat full installation
Domibus 3.2.2
- Possibility to configure the limit of downloaded/not-downloaded messages for the retention worker
- Fixed the notifications sent by the JMS plugin
- Deprecated the method "void messageReceiveFailed(String messageId, String ednpoint)" from the BackendConnector interface and added a new method "void messageReceiveFailed(MessageReceiveFailureEvent messageReceiveFailureEvent)"
- Changed the default JMX password for WebLogic
- Fixed the search of the JMS messages for WebLogic(for JMS messages having property with null values) and Tomcat(for JMS messages with no "Text" property)
- Solved issue related to CXF attachment temp file leakage (for payloads over 200Mb).
- New configuration properties added for ConnectionTimeout and ReceiveTimeout for connection between access points.
- Fixed Domibus integration with SMP/SML
- Fixed bug about the retention (downloaded and undownloaded) parameters. Downloading the message, its status will be set to DOWNLOADED.
- Fixed message cannot be downloaded, when the message retention download is set to 0 and the file storage is used.
Domibus 3.2.1